--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8082
   servlet:
     context-path: /activity
 spring:
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/activity?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false
     username: root
-    password: daixinbao
+    password: root
   freemarker:
     request-context-attribute: req #req访问request
     suffix: .html
